storage/innobase/sync/sync0rw.cc
@@ -284,7 +284,7 @@ rw_lock_s_lock_spin(
 {
 	ulint		i = 0;	/* spin round count */
 	sync_array_t*	sync_arr;
-	lint		spin_count = 0;
+	lint		spin_round_count = 0;
 	int64_t		count_os_wait = 0;
 
 	/* We reuse the thread id to index into the counter, cache
@@ -292,10 +292,13 @@ rw_lock_s_lock_spin(
 
 	ut_ad(rw_lock_validate(lock));
 
+	rw_lock_stats.rw_s_spin_wait_count.inc();
+
 lock_loop:
 
 	/* Spin waiting for the writer field to become free */
 	HMT_low();
+	ulint j = i;
 	while (i < srv_n_spin_wait_rounds &&
 	       my_atomic_load32_explicit(&lock->lock_word,
 					 MY_MEMORY_ORDER_RELAXED) <= 0) {
@@ -308,7 +311,7 @@ lock_loop:
 		os_thread_yield();
 	}
 
-	++spin_count;
+	spin_round_count += lint(i - j);
 
 	/* We try once again to obtain the lock */
 	if (rw_lock_s_lock_low(lock, pass, file_name, line)) {
@@ -319,7 +322,7 @@ lock_loop:
 			rw_lock_stats.rw_s_os_wait_count.add(count_os_wait);
 		}
 
-		rw_lock_stats.rw_s_spin_round_count.add(spin_count);
+		rw_lock_stats.rw_s_spin_round_count.add(spin_round_count);
 
 		return; /* Success */
 	} else {
@@ -353,7 +356,8 @@ lock_loop:
 					count_os_wait);
 			}
 
-			rw_lock_stats.rw_s_spin_round_count.add(spin_count);
+			rw_lock_stats.rw_s_spin_round_count.add(
+				spin_round_count);
 
 			return; /* Success */
 		}
@@ -412,7 +416,7 @@ rw_lock_x_lock_wait_func(
 	unsigned	line)	/*!< in: line where requested */
 {
 	ulint		i = 0;
-	lint		n_spins = 0;
+	lint		n_spin_rounds = 0;
 	sync_array_t*	sync_arr;
 	int64_t		count_os_wait = 0;
 
@@ -428,7 +432,7 @@ rw_lock_x_lock_wait_func(
 		}
 
 		/* If there is still a reader, then go to sleep.*/
-		++n_spins;
+		n_spin_rounds += i;
 
 		sync_cell_t*	cell;
 
@@ -463,7 +467,7 @@ rw_lock_x_lock_wait_func(
 		}
 	}
 	HMT_medium();
-	rw_lock_stats.rw_x_spin_round_count.add(n_spins);
+	rw_lock_stats.rw_x_spin_round_count.add(n_spin_rounds);
 
 	if (count_os_wait > 0) {
 		lock->count_os_wait += static_cast<uint32_t>(count_os_wait);
@@ -656,12 +660,18 @@ rw_lock_x_lock_func(
 {
 	ulint		i = 0;
 	sync_array_t*	sync_arr;
-	lint		spin_count = 0;
+	lint		spin_round_count = 0;
 	int64_t		count_os_wait = 0;
 
 	ut_ad(rw_lock_validate(lock));
 	ut_ad(!rw_lock_own(lock, RW_LOCK_S));
 
+	if (rw_lock_x_lock_low(lock, pass, file_name, line)) {
+		/* Locking succeeded */
+		return;
+	}
+
+	rw_lock_stats.rw_x_spin_wait_count.inc();
 lock_loop:
 
 	if (rw_lock_x_lock_low(lock, pass, file_name, line)) {
@@ -672,7 +682,7 @@ lock_loop:
 			rw_lock_stats.rw_x_os_wait_count.add(count_os_wait);
 		}
 
-		rw_lock_stats.rw_x_spin_round_count.add(spin_count);
+		rw_lock_stats.rw_x_spin_round_count.add(spin_round_count);
 
 		/* Locking succeeded */
 		return;
@@ -681,6 +691,7 @@ lock_loop:
 
 		/* Spin waiting for the lock_word to become free */
 		HMT_low();
+		ulint j = i;
 		while (i < srv_n_spin_wait_rounds
 		       && my_atomic_load32_explicit(&lock->lock_word, MY_MEMORY_ORDER_RELAXED) <= X_LOCK_HALF_DECR) {
 			ut_delay(srv_spin_wait_delay);
@@ -688,7 +699,7 @@ lock_loop:
 		}
 
 		HMT_medium();
-		spin_count += lint(i);
+		spin_round_count += lint(i - j);
 
 		if (i >= srv_n_spin_wait_rounds) {
 
@@ -718,7 +729,7 @@ lock_loop:
 			rw_lock_stats.rw_x_os_wait_count.add(count_os_wait);
 		}
 
-		rw_lock_stats.rw_x_spin_round_count.add(spin_count);
+		rw_lock_stats.rw_x_spin_round_count.add(spin_round_count);
 
 		/* Locking succeeded */
 		return;
@@ -754,12 +765,17 @@ rw_lock_sx_lock_func(
 {
 	ulint		i = 0;
 	sync_array_t*	sync_arr;
-	lint		spin_count = 0;
+	lint		spin_round_count = 0;
 	int64_t		count_os_wait = 0;
-	lint		spin_wait_count = 0;
 
 	ut_ad(rw_lock_validate(lock));
 	ut_ad(!rw_lock_own(lock, RW_LOCK_S));
+
+	if (rw_lock_sx_lock_low(lock, pass, file_name, line)) {
+		/* Locking succeeded */
+		return;
+	}
+	rw_lock_stats.rw_sx_spin_wait_count.inc();
 
 lock_loop:
 
@@ -771,24 +787,22 @@ lock_loop:
 			rw_lock_stats.rw_sx_os_wait_count.add(count_os_wait);
 		}
 
-		rw_lock_stats.rw_sx_spin_round_count.add(spin_count);
-		rw_lock_stats.rw_sx_spin_wait_count.add(spin_wait_count);
+		rw_lock_stats.rw_sx_spin_round_count.add(spin_round_count);
 
 		/* Locking succeeded */
 		return;
 
 	} else {
 
-		++spin_wait_count;
-
 		/* Spin waiting for the lock_word to become free */
+		ulint j = i;
 		while (i < srv_n_spin_wait_rounds
 		       && my_atomic_load32_explicit(&lock->lock_word, MY_MEMORY_ORDER_RELAXED) <= X_LOCK_HALF_DECR) {
 			ut_delay(srv_spin_wait_delay);
 			i++;
 		}
 
-		spin_count += lint(i);
+		spin_round_count += lint(i - j);
 
 		if (i >= srv_n_spin_wait_rounds) {
 
@@ -819,8 +833,7 @@ lock_loop:
 			rw_lock_stats.rw_sx_os_wait_count.add(count_os_wait);
 		}
 
-		rw_lock_stats.rw_sx_spin_round_count.add(spin_count);
-		rw_lock_stats.rw_sx_spin_wait_count.add(spin_wait_count);
+		rw_lock_stats.rw_sx_spin_round_count.add(spin_round_count);
 
 		/* Locking succeeded */
 		return;
